[gd_scene load_steps=11 format=3 uid="uid://cn8v06i2dpcf7"]

[ext_resource type="Script" path="res://title_screen.gd" id="1_gsi8r"]
[ext_resource type="Texture2D" uid="uid://b1l4rscbohsfy" path="res://Images/Backgrounds/titleBackground.png" id="2_bqigv"]
[ext_resource type="Texture2D" uid="uid://faiuiklwa5ov" path="res://Images/Buttons/endless.png" id="3_65n0e"]
[ext_resource type="Texture2D" uid="uid://dl002jftcrfyo" path="res://Images/Buttons/level_1.png" id="4_76r8o"]
[ext_resource type="Texture2D" uid="uid://crsie0ihfi2mq" path="res://Images/Buttons/level_2.png" id="5_aqhh7"]
[ext_resource type="Texture2D" uid="uid://b0v01gygjfl54" path="res://Images/Buttons/level_3.png" id="6_jpkrt"]
[ext_resource type="AudioStream" uid="uid://cmbkf8bletes3" path="res://Sounds/bubble-pop.mp3" id="7_2xliq"]
[ext_resource type="Texture2D" uid="uid://cq0o0a8brioxn" path="res://Images/logos/settings.png" id="7_qx4kf"]
[ext_resource type="Script" path="res://settings_screen.gd" id="9_107w1"]
[ext_resource type="Texture2D" uid="uid://bm3c6pfn0wwd7" path="res://Images/menus/settings.png" id="10_61mh8"]

[node name="Node2D" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_gsi8r")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1600.0
offset_bottom = 900.0
texture = ExtResource("2_bqigv")

[node name="EndlessButton" type="Button" parent="."]
layout_mode = 0
offset_left = 645.0
offset_top = 303.0
offset_right = 953.0
offset_bottom = 371.0
mouse_default_cursor_shape = 2
icon = ExtResource("3_65n0e")

[node name="Level1Button" type="Button" parent="."]
layout_mode = 0
offset_left = 645.0
offset_top = 394.0
offset_right = 953.0
offset_bottom = 462.0
mouse_default_cursor_shape = 2
icon = ExtResource("4_76r8o")

[node name="Level2Button" type="Button" parent="."]
layout_mode = 0
offset_left = 645.0
offset_top = 487.0
offset_right = 953.0
offset_bottom = 555.0
mouse_default_cursor_shape = 2
icon = ExtResource("5_aqhh7")

[node name="Level3Button" type="Button" parent="."]
layout_mode = 0
offset_left = 645.0
offset_top = 581.0
offset_right = 953.0
offset_bottom = 649.0
mouse_default_cursor_shape = 2
disabled = true
icon = ExtResource("6_jpkrt")

[node name="SettingsButton" type="Button" parent="."]
process_mode = 3
layout_mode = 0
offset_left = 736.0
offset_top = 675.0
offset_right = 863.0
offset_bottom = 801.0
mouse_default_cursor_shape = 2
icon = ExtResource("7_qx4kf")
flat = true
expand_icon = true

[node name="Boop" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_2xliq")

[node name="SettingsScreen" type="Control" parent="."]
process_mode = 3
z_index = 6
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("9_107w1")

[node name="Boop" type="AudioStreamPlayer2D" parent="SettingsScreen"]
process_mode = 3
stream = ExtResource("7_2xliq")

[node name="EscapeMenuBackground" type="TextureRect" parent="SettingsScreen"]
layout_mode = 0
offset_left = 364.0
offset_top = 227.0
offset_right = 1234.0
offset_bottom = 679.0
texture = ExtResource("10_61mh8")
expand_mode = 1
stretch_mode = 5

[node name="BackToTitleButton" type="Button" parent="SettingsScreen"]
process_mode = 2
layout_mode = 0
offset_left = 522.0
offset_top = 539.0
offset_right = 1077.0
offset_bottom = 613.0
mouse_default_cursor_shape = 2
flat = true

[node name="VolumeMenu" type="Panel" parent="SettingsScreen"]
process_mode = 2
z_index = 2
layout_mode = 0
offset_left = 830.0
offset_top = 448.0
offset_right = 1056.0
offset_bottom = 476.0

[node name="VolumeSlider" type="HSlider" parent="SettingsScreen/VolumeMenu"]
process_mode = 2
z_index = 10
layout_mode = 0
offset_left = 6.0
offset_top = 1.0
offset_right = 220.0
offset_bottom = 28.0
mouse_default_cursor_shape = 2
max_value = 1.0
step = 0.01
value = 0.5
